# testmcpy

./: .env.example  .flake8  .gitignore  .gitleaks.toml  .llm_providers.yaml.example  .mcp_services.yaml.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  __init__.py  action.yml  api_test_report.txt  cli.py  comprehensive_api_test.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  setup_new.py  test_auth_debugger_tui.py  test_auth_integration.py  test_optimize_docs.py  test_optimize_docs_curl.sh  validate_installation.py
.claude/: context.md  project.json  project.md
.github/workflows/: ci.yml  deploy-docs.yml  docs-pr-check.yml  publish.yml  security.yml
Formula/: testmcpy.rb
alembic/versions/: a1b2c3d4e5f6_add_tool_call_metrics_to_question_results.py  b7c8d9e0f1a2_add_analytics_indexes.py  c3d4e5f6a7b8_add_heartbeat_at_to_test_runs.py  d4e5f6a7b8c9_add_base_score_to_question_results.py
context/: README.md  TODO.md
docs/: AUTH_CHANGES_SUMMARY.md  CHAT_INTERFACE.md  LLM_DOCS_OPTIMIZATION_PLAN.md  MCP_PROFILES.md  OPTIMIZE_DOCS_API.md  OPTIMIZE_DOCS_IMPLEMENTATION.md  OPTIMIZE_DOCS_QUICKSTART.md
docs-site/: next-sitemap.config.cjs  next.config.mjs  package-lock.json  package.json  theme.config.tsx
docs-site/components/: Hero.module.css  Hero.tsx
docs-site/pages/: _meta.ts  faq.mdx  getting-started.mdx  index.mdx  installation.mdx  styles.css
docs-site/pages/cli/: _meta.ts  advanced.mdx  baselines.mdx  benchmarking.mdx  chat-and-serve.mdx  discovery.mdx  generation.mdx  index.mdx  running-tests.mdx  setup.mdx
docs-site/pages/concepts/: _meta.ts  architecture.mdx  authentication.mdx  configuration.mdx  evaluators.mdx  index.mdx  mcp-profiles.mdx  test-format.mdx
docs-site/pages/guides/: _meta.ts  ci-cd-integration.mdx  custom-evaluators.mdx  writing-tests.mdx
docs-site/pages/web-ui/: _meta.ts  auth-debugger.mdx  chat.mdx  config-and-history.mdx  health-and-security.mdx  index.mdx  mcp-explorer.mdx  metrics-and-comparison.mdx  profiles.mdx  reports.mdx  test-manager.mdx
docs-site/public/: llms.txt  robots.txt
docs-site/scripts/: sync-assets.mjs
evals/: base_evaluators.py
examples/: testmcpy-gate.yaml
examples/ci-cd/: github-actions.yml
examples/security/: injection_tests.yaml  poisoned_tools.json
integration_tests/api/: conftest.py  test_chat_endpoints.py  test_llm_generation_security.py  test_profiles_router.py  test_results_router.py  test_smoke_reports.py
integration_tests/cli/: conftest.py  test_cli_analytics.py  test_cli_badge.py  test_cli_bench.py  test_cli_conformance.py  test_cli_gate.py  test_cli_run.py  test_cli_scan.py  test_cli_score.py  test_setup_llm_profiles.py
integration_tests/e2e/: conftest.py  test_auth_debugger_e2e.py  test_chat_e2e.py  test_compare_e2e.py  test_health_e2e.py  test_llm_profiles_crud.py  test_metrics_e2e.py  test_reports.py  test_security_e2e.py  test_v1_features.py
my_mcp_tests/: mcp_test_config.yaml
my_mcp_tests/tests/: example_tests.yaml
reports/: .gitkeep
scripts/: check_mypy_ratchet.sh  check_no_preset_urls.sh  publish.sh
src/: llm_integration.py  mcp_client.py  test_runner.py
testmcpy/: __init__.py  __main__.py  analytics.py  auth_debugger.py  auth_flow_recorder.py  benchmarks.py  cli.py  config.py  db.py  llm_profiles.py  llm_testing.py  mcp_profiles.py  models.py  scoring.py  scrubber.py  smoke_test.py  storage.py
testmcpy/agent/: orchestrator.py
testmcpy/cli/: __init__.py  app.py
testmcpy/cli/commands/: agent.py  analytics.py  badge.py  bench.py  conformance.py  mcp.py  run.py  scan.py  score.py  server.py  tools.py  tui.py  wizard.py
testmcpy/core/: chat_session.py  docs_optimizer.py
testmcpy/evals/: __init__.py  auth_evaluators.py  base_evaluators.py  evaluator_packs.py  security_evaluators.py
testmcpy/formatters/: json_yaml.py
testmcpy/security/: __init__.py  rules.py  scanner.py
testmcpy/server/: api.py  run_persistence.py  run_registry.py  state.py  tool_compare_endpoint.py  websocket.py
testmcpy/server/.claude/: context.md
testmcpy/server/helpers/: mcp_config.py
testmcpy/server/routers/: agent.py  analytics.py  auth.py  compare.py  generation_logs.py  health.py  llm.py  mcp_profiles.py  metrics.py  results.py  runs.py  security.py  tests.py  tools.py
testmcpy/src/: ci_gate.py  emitters.py  llm_integration.py  mcp_client.py  model_registry.py  models.py  oauth_storage.py  runner_tools.py  test_runner.py  token_manager.py  usability_score.py
testmcpy/src/.claude/: context.md
testmcpy/tui/: README.md  app.py
testmcpy/tui/screens/: __init__.py  auth_debugger.py  config.py  home.py  tests.py
testmcpy/tui/widgets/: __init__.py  auth_flow_widget.py
testmcpy/ui/: index.html  package-lock.json  package.json  vite.config.js
testmcpy/ui/.claude/: context.md
tests/: basic_test.yaml  example_mcp_tests.yaml  test_auth_flow_recorder.py  test_url_protection.py
unit_tests/: test_advanced_auth.py  test_agent_orchestrator_env.py  test_agent_profile_resolution.py  test_analytics.py  test_analytics_router.py  test_assistant_cost.py  test_assistant_provider.py  test_assistant_sse_concurrency_and_walls.py  test_assistant_sse_idle_abort.py  test_assistant_sse_multi_turn.py  test_auth_middleware.py  test_benchmarks.py  test_compare_router.py  test_config.py  test_config_readonly_fallback.py  test_emitters.py  test_evaluators.py  test_evaluators_advanced.py  test_generation_logs_router.py  test_hardening.py  test_httpx_factories.py  test_llm_chat_history.py  test_llm_profiles.py  test_llm_providers.py  test_llm_result_scrubbing.py  test_llm_sdk_error_events.py  test_llm_testing.py  test_mcp_auth_scrubbing.py  test_mcp_profiles_router.py  test_mcp_token_refresh.py  test_metrics_router.py  test_model_registry_aliases.py  test_mtls.py  test_oauth_debugger.py  test_oauth_token_storage.py  test_profile_runtime_consumers.py  test_provider_factories.py  test_run_persistence.py  test_run_registry.py  test_run_single_llm_profile.py  (+19 more)
(+48 files in other folders)
